# webstart

./: Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  requirements.txt
app/: .env  Dockerfile  pyproject.toml
app/apps/blog/: admin.py  models.py
app/apps/blog/migrations/: 0001_initial.py
app/apps/catalog/: urls.py  views.py
app/apps/delivery_widget/: api.py  urls.py  views.py
app/apps/delivery_widget/data/: region_codes.py
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/core/: asgi.py  settings.py  wsgi.py
app/static/cdek_widget/: delivery_widget.js  main.js
app/templates/: base.html  example_cdek_widget1.html
proxy/: Dockerfile  default.conf
scripts/: entrypoint.sh
