[tool.poetry]
name = "django-breath"
version = "0.1.0"
description = "Breath"
authors = ["Dmitriy Velichko"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
django-environ = "^0.4.5"
requests = "^2.24.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
